--- a/_layout/header.html
+++ b/_layout/header.html
@@ -1,5 +1,6 @@
 <header>
-<div class="blog-name"><a href="/">G⁻¹Lab</a></div>
+  <div class="blog-name"> <img src="/assets/header.png" style="width: 900px; min-width: 300px;" id="logo_ginvlab">
+    <!-- <a href="/">G⁻¹Lab</a> --></div>
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
