new banner, update menus

--- a/_layout/header.html
+++ b/_layout/header.html
@@ -1,11 +1,11 @@
 <header>
-  <div class="blog-name"> <img src="/assets/header.png" style="width: 900px; min-width: 300px;" id="logo_ginvlab">
+  <div class="blog-name"> <img src="/assets/ginvlab_header.png" style="width: 900px; min-width: 300px;" id="logo_ginvlab">
     <!-- <a href="/">G⁻¹Lab</a> --></div>
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/menu1/">Tutorials</a></li>
-    <li><a href="/menu2/">Publications</a></li>
+    <li><a href="/tutorials/">Tutorials</a></li>
+    <li><a href="/publications/">Publications</a></li>
   </ul>
   <img src="/assets/hamburger.svg" id="menu-icon">
 </nav>
