900 to 850px width

--- a/_layout/header.html
+++ b/_layout/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="blog-name"> <img src="/assets/ginvlab_header.png" style="width: 900px; min-width: 300px;" id="logo_ginvlab">
+  <div class="blog-name"> <img src="/assets/ginvlab_header.png" style="width: 850px; min-width: 300px;" id="header_logo_ginvlab">
     <!-- <a href="/">G⁻¹Lab</a> --></div>
 <nav>
   <ul>
